force-app/main/default/objects/inspire1__Project_Tasks__c/inspire1__Project_Tasks__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - This object captures the tasks related to the project.</description>
    <label>Project Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>