force-app/main/default/objects/inspire1__Project_Tasks__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <formula>CASESAFEID(inspire1__Project__r.inspire1__Account__c)</formula>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>