force-app/main/default/objects/inspire1__Project_Tasks__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>inspire1__Project__r.inspire1__Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>