force-app/main/default/objects/inspire1__Project_Tasks__c/fields/DMS_F_who__c.field-meta.xml
<CustomField>
    <fullName>DMS_F_who__c</fullName>
    <label>DMS F who</label>
    <length>255</length>
    <type>Text</type>
</CustomField>