force-app/main/default/objects/inspire1__Project_Tasks__c/fields/DMS_Priority__c.field-meta.xml
<CustomField>
    <fullName>DMS_Priority__c</fullName>
    <label>DMS Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>