force-app/main/default/objects/inspire1__Project_Tasks__c/fields/DMS_Project_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Project_Task_Id__c</fullName>
    <label>DMS Project Task Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>