force-app/main/default/objects/inspire1__Project_Tasks__c/fields/DMS_Status__c.field-meta.xml
<CustomField>
    <fullName>DMS_Status__c</fullName>
    <label>DMS Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>