force-app/main/default/objects/inspire1__Project_Tasks__c/fields/DMS_Type__c.field-meta.xml
<CustomField>
    <fullName>DMS_Type__c</fullName>
    <label>DMS Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>