force-app/main/default/objects/inspire1__Project_Tasks__c/fields/Has_Active_COI__c.field-meta.xml
<CustomField>
    <fullName>Has_Active_COI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Active COI ?</label>
    <type>Checkbox</type>
</CustomField>