force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Actual_Cost__c</fullName>
    <description>Captures actual cost of project task.</description>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>