force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Actual_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Actual_Effort__c</fullName>
    <description>Defines the actual number of hours used to complete the project task. Roll up of Time Entries referenced from Salesforce Task.</description>
    <inlineHelpText>Defines the actual number of hours used to complete the project task based on resource time entries.</inlineHelpText>
    <label>Actual Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>