force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Actual_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Actual_Finish_Date__c</fullName>
    <label>Actual Finish Date</label>
    <type>DateTime</type>
</CustomField>