force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Baseline_Duration_Edit__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Baseline_Duration_Edit__c</fullName>
    <label>Baseline Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>