force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__BaselineEndDate__c.field-meta.xml
<CustomField>
    <fullName>inspire1__BaselineEndDate__c</fullName>
    <label>Baseline Finish</label>
    <type>DateTime</type>
</CustomField>