force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__BaselineStartDate__c.field-meta.xml
<CustomField>
    <fullName>inspire1__BaselineStartDate__c</fullName>
    <label>Baseline Start</label>
    <type>DateTime</type>
</CustomField>