force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Booking_Task__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Booking_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Task</label>
    <type>Checkbox</type>
</CustomField>