force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Budgeted_Cost__c</fullName>
    <description>Captures budgeted cost for project task.</description>
    <label>Budgeted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>