force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Category__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Category__c</fullName>
    <description>Defines category of task.  Used for reporting purposes.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Non-Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>