force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Color__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Color__c</fullName>
    <description>Defines the background color of the task row.</description>
    <label>Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>