force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__ConstraintDate__c.field-meta.xml
<CustomField>
    <fullName>inspire1__ConstraintDate__c</fullName>
    <description>Date applied to task constraint.</description>
    <label>Constraint Date</label>
    <type>DateTime</type>
</CustomField>