force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__ConstraintType__c.field-meta.xml
<CustomField>
    <fullName>inspire1__ConstraintType__c</fullName>
    <description>Defines the type of constraint applied to the project task.</description>
    <label>Constraint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As soon as possible</fullName>
            </value>
            <value>
                <fullName>As late as possible</fullName>
            </value>
            <value>
                <fullName>Finish no earlier than</fullName>
            </value>
            <value>
                <fullName>Finish no later than</fullName>
            </value>
            <value>
                <fullName>Must finish on</fullName>
            </value>
            <value>
                <fullName>Must start on</fullName>
            </value>
            <value>
                <fullName>Start no earlier than</fullName>
            </value>
            <value>
                <fullName>Start no later than</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>