force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Critical__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the project task is on the critical path.</description>
    <label>Critical</label>
    <type>Checkbox</type>
</CustomField>