force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Days_Overdue__c</fullName>
    <description>Defines number of days a task is overdue.</description>
    <formula>IF(
    AND(
        DATEVALUE(inspire1__FinishDate__c) &lt; TODAY(),
        NOT(ISPICKVAL( inspire1__Status__c, &apos;Completed&apos; )),
        NOT(CONTAINS( $Setup.inspire1__InspirePlannerConfig__c.inspire1__Completed_Task_Statuses__c, TEXT(inspire1__Status__c)))
        ),
  TODAY() - DATEVALUE(inspire1__FinishDate__c),
  0)</formula>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>