force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Done__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Done__c</fullName>
    <description>% Done</description>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>