force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Duration__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Duration__c</fullName>
    <description>Captures project duration (days).</description>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>