force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Duration_Complete__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Duration_Complete__c</fullName>
    <formula>IF(ISPICKVAL( inspire1__DurationUnit__c, &apos;w&apos;), (inspire1__Duration__c * 5) * inspire1__Done__c,
  IF(ISPICKVAL( inspire1__DurationUnit__c, &apos;mo&apos;), (inspire1__Duration__c * 20) * inspire1__Done__c,
    inspire1__Duration__c * inspire1__Done__c)
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>