force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__DurationUnit__c.field-meta.xml
<CustomField>
    <fullName>inspire1__DurationUnit__c</fullName>
    <description>Identifies if task is managed in days or hours.</description>
    <label>Duration Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>h</fullName>
            </value>
            <value>
                <fullName>d</fullName>
                <default>true</default>
                <label>d</label>
            </value>
            <value>
                <fullName>w</fullName>
            </value>
            <value>
                <fullName>mo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>