force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__External_ID__c.field-meta.xml
<CustomField>
    <fullName>inspire1__External_ID__c</fullName>
    <description>Used for data imports.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>