force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__FeedItemsViewHistory__c.field-meta.xml
<CustomField>
    <fullName>inspire1__FeedItemsViewHistory__c</fullName>
    <label>FeedItemsViewHistory</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>