force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Finish_Date__c</fullName>
    <description>Replaced with Finish Date Only formula field.</description>
    <label>Finish Date (deprecated)</label>
    <type>Date</type>
</CustomField>