force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Finish_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Finish_Date_Only__c</fullName>
    <formula>DATEVALUE( inspire1__FinishDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finish Date Only</label>
    <type>Date</type>
</CustomField>