force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Finish_Variance__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Finish_Variance__c</fullName>
    <description>The Finish Variance field contains the amount of time that represents the difference between a baseline finish date of a task and its currently scheduled finish date. 

Finish Variance = Finish Date - Baseline Finish</description>
    <formula>DATEVALUE(inspire1__FinishDate__c) - DATEVALUE(inspire1__BaselineEndDate__c)</formula>
    <inlineHelpText>Finish Variance = Finish Date - Baseline Finish

The Finish Variance field contains the amount of time that represents the difference between a baseline finish date of a task and its currently scheduled finish date.</inlineHelpText>
    <label>Finish Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>