force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__FinishDate__c.field-meta.xml
<CustomField>
    <fullName>inspire1__FinishDate__c</fullName>
    <description>Captures task finish date/time for tasks managed in hours.</description>
    <label>Finish Date</label>
    <type>DateTime</type>
</CustomField>