force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Kanban_Status__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Kanban_Status__c</fullName>
    <label>Kanban Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>