force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Multi_Role__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Multi_Role__c</fullName>
    <label>Multi Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Role</valueSetName>
    </valueSet>
</CustomField>