force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Name__c</fullName>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>