force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Notes__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Notes__c</fullName>
    <description>Captures custom notes related to Task.</description>
    <label>Description/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>