force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Overdue__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines that task is open beyond Finish Date.</description>
    <inlineHelpText>Defines that task is open beyond Finish Date.</inlineHelpText>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>