force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Parent_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the parent task if applicable.</description>
    <label>Parent Task</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>The Parent Task must belong to the same Project.</errorMessage>
        <filterItems>
            <field>inspire1__Project_Tasks__c.inspire1__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.inspire1__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>inspire1__Project_Tasks__c</referenceTo>
    <relationshipLabel>Child Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>