force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__parentId__c.field-meta.xml
<CustomField>
    <fullName>inspire1__parentId__c</fullName>
    <description>ID of parent task.</description>
    <label>parentId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>