force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__PercentSlippage__c.field-meta.xml
<CustomField>
    <fullName>inspire1__PercentSlippage__c</fullName>
    <description>Defines the amount of duration the task has slipped from original baseline.</description>
    <formula>IF (
  AND(inspire1__Duration__c - inspire1__Baseline_Duration_Edit__c &gt; 0, inspire1__Baseline_Duration_Edit__c &gt; 0),
  (inspire1__Duration__c - inspire1__Baseline_Duration_Edit__c)/inspire1__Baseline_Duration_Edit__c,
  0
  )</formula>
    <inlineHelpText>Defines the amount of duration the task has slipped from original baseline.</inlineHelpText>
    <label>% Slippage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>