force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Phantom_ID__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Phantom_ID__c</fullName>
    <description>Used for saving logic.</description>
    <label>sysPhantomID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>