force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Planned_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Planned_Effort__c</fullName>
    <description>Number of hours estimated to complete the project task.</description>
    <inlineHelpText>Number of hours estimated to complete the project task.</inlineHelpText>
    <label>Planned Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>