force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Predecessors__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Predecessors__c</fullName>
    <description>List of task predecessors.</description>
    <label>Predecessors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>