force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Priority__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Priority__c</fullName>
    <description>Defines the priority of task.  Synced with priority of Salesforce task.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>