force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Project__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project__c</fullName>
    <label>Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Inspire_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>