force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__ReadyToStart__c.field-meta.xml
<CustomField>
    <fullName>inspire1__ReadyToStart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if all Predecessors have been met and task is ready to start.</description>
    <inlineHelpText>Defines if all Predecessors have been met and task is ready to start.</inlineHelpText>
    <label>Ready to Start</label>
    <type>Checkbox</type>
</CustomField>