force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Remaining_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Remaining_Checklist_Items__c</fullName>
    <description>Count of remaining checklist items that are required.</description>
    <label>Remaining Checklist Items</label>
    <summaryFilterItems>
        <field>inspire1__Checklist_Item__c.inspire1__Completed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>inspire1__Checklist_Item__c.inspire1__Required__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Checklist_Item__c.inspire1__Project_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>