force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Remaining_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Remaining_Effort__c</fullName>
    <description>Calculates the remaining amount of Effort in hours (Total Planned Effort less Actual Effort).</description>
    <formula>IF (
   inspire1__Total_Planned_Effort__c = 0,
   inspire1__Planned_Effort__c - inspire1__Actual_Effort__c,
   inspire1__Total_Planned_Effort__c - inspire1__Actual_Effort__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the remaining amount of Effort in hours (Total Planned Effort less Actual Effort).</inlineHelpText>
    <label>Remaining Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>