force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Report__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report</label>
    <type>Checkbox</type>
</CustomField>