force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Role__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Role__c</fullName>
    <description>Defines resource role performing the work.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Role</valueSetName>
    </valueSet>
</CustomField>