force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__RowNumber__c.field-meta.xml
<CustomField>
    <fullName>inspire1__RowNumber__c</fullName>
    <description>Row number of task.</description>
    <label>Row Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>