force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Slack__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Slack__c</fullName>
    <description>The free slack (or free float) is the amount of time that a task can be delayed without causing a delay to any of its successors.</description>
    <inlineHelpText>The free slack (or free float) is the amount of time that a task can be delayed without causing a delay to any of its successors.</inlineHelpText>
    <label>Free Slack</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>