force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Sprint__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sprint the User Story (Project Task) belongs to.</description>
    <label>Sprint</label>
    <referenceTo>inspire1__Sprint__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>