force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Start_Date__c</fullName>
    <description>Replaced with Start Date Only formula field.</description>
    <label>Start Date (deprecated)</label>
    <type>Date</type>
</CustomField>