force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Start_Variance__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Start_Variance__c</fullName>
    <description>The Start Variance field contains the amount of time that represents the difference between a baseline start date of a task and its currently scheduled start date.

Start Variance = Start Date - Baseline Start</description>
    <formula>DATEVALUE(inspire1__StartDate__c) - DATEVALUE(inspire1__BaselineStartDate__c)</formula>
    <inlineHelpText>Start Variance = Start Date - Baseline Start

The Start Variance field contains the amount of time that represents the difference between a baseline start date of a task and its currently scheduled start date.</inlineHelpText>
    <label>Start Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>