force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Story_Points__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Story_Points__c</fullName>
    <description>Used with Agile projects to estimate size of User Story/Task.</description>
    <inlineHelpText>A unit of measure for expressing an estimate of the overall effort that will be required to fully implement User Story/Task.</inlineHelpText>
    <label>Story Points</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>