force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Successors__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Successors__c</fullName>
    <description>Captures related successor tasks.</description>
    <label>Successors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>