force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__sysAssignedToIDs__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysAssignedToIDs__c</fullName>
    <description>Index field used to capture IDs of Assigned To resource and related Salesforce Task.</description>
    <label>sysAssignedToIDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>