force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__sysAssignedToIDs_isEmpty__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysAssignedToIDs_isEmpty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sysAssignedToIDs isEmpty</label>
    <type>Checkbox</type>
</CustomField>