force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__sysAssignments__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysAssignments__c</fullName>
    <label>sysAssignments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>