force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__sysBacklogOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysBacklogOrderNumber__c</fullName>
    <label>sysBacklogOrderNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>