force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__sysCompleted__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysCompleted__c</fullName>
    <formula>AND(
				NOT( ISPICKVAL( inspire1__Status__c , &apos;&apos; ) ),
				OR(
				    TEXT( inspire1__Status__c ) = inspire1__sysCompletedStatuses__c,
				    FIND( TEXT( inspire1__Status__c ) , inspire1__sysCompletedStatuses__c ) = 1,
				    CONTAINS( inspire1__sysCompletedStatuses__c , &apos;;&apos; &amp; TEXT( inspire1__Status__c ) )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sysCompleted</label>
    <type>Checkbox</type>
</CustomField>