force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__sysCompletedStatuses__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysCompletedStatuses__c</fullName>
    <description>References completed status values from custom settings.</description>
    <formula>$Setup.inspire1__InspirePlannerConfig__c.inspire1__Completed_Task_Statuses__c</formula>
    <label>sysCompletedStatuses</label>
    <type>Text</type>
</CustomField>