force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__sysDurationInDays__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysDurationInDays__c</fullName>
    <description>Converts all duration units to days.  Used for % Completed rollup for Project.</description>
    <label>sysDurationInDays</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>