force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__sysLastSystemUpdate__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysLastSystemUpdate__c</fullName>
    <description>Defines when last automated updated was executed.</description>
    <label>sysLastSystemUpdate</label>
    <type>DateTime</type>
</CustomField>