force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__sysParentTaskLookupId__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysParentTaskLookupId__c</fullName>
    <description>Id of Parent Task record.  Used for validation.</description>
    <formula>inspire1__Parent_Task__r.Id</formula>
    <label>sysParentTaskLookupId</label>
    <type>Text</type>
</CustomField>