force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__sysTaskAutoCreated__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysTaskAutoCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify that the related Salesforce Tasks have been created by an automated process and not the application.  For example, auto created via a process flow.</description>
    <label>sysTaskAutoCreated</label>
    <type>Checkbox</type>
</CustomField>