force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__sysTaskLED__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysTaskLED__c</fullName>
    <formula>IF(AND( inspire1__Days_Overdue__c &gt; 0, inspire1__Days_Overdue__c &lt;= $Setup.inspire1__InspirePlannerConfig__c.inspire1__Task_Amber_Days_Overdue__c),&apos;Amber&apos;,
IF( inspire1__Days_Overdue__c &gt; $Setup.inspire1__InspirePlannerConfig__c.inspire1__Task_Amber_Days_Overdue__c , &apos;Red&apos;, &apos;Green&apos;))</formula>
    <label>sysTaskLED</label>
    <type>Text</type>
</CustomField>