force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Task_Earned_Value__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Earned_Value__c</fullName>
    <description>Amount earned based on the % complete of project task.  Calculation: Budgeted Cost * % Complete</description>
    <formula>inspire1__Budgeted_Cost__c *  inspire1__Done__c</formula>
    <inlineHelpText>Amount earned based on the % complete of project task.  Calculation: Budgeted Cost * % Complete</inlineHelpText>
    <label>Task Earned Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>